fix get all projects on refresh

--- a/lab/pages/assets/styles.css
+++ b/lab/pages/assets/styles.css
@@ -1,4 +1,8 @@
-.home-container h1{
+.home-container h1 {
     cursor: pointer;
     text-transform: capitalize;
+}
+
+.lab-container .lab-name {
+    text-transform: capitalize; 
 }
