fisrt successfull hierarchy build

--- a/plugins/typedoc-plugin-markdown/src/resources/partials/header.hbs
+++ b/plugins/typedoc-plugin-markdown/src/resources/partials/header.hbs
@@ -1,6 +1,9 @@
 ---
 layout: default
 title: {{{reflectionTitle true true}}}
+parent: {{{parent false}}}
+grand_parent: {{{parent true}}}
+has_children: {{{hasChildren}}}
 ---
 
 {{#ifShowProjectName}}
