--- a/tools/typedoc-plugin-markdown/src/resources/partials/index.hbs
+++ b/tools/typedoc-plugin-markdown/src/resources/partials/index.hbs
@@ -18,10 +18,10 @@
 
 {{else}}
 
-### {{title}}
-
+| {{title}} |
+|-----------|
 {{#each children}}
-* [{{{escape name}}}]({{relativeURL url}})
+| [{{{escape name}}}]({{relativeURL url}}) |
 {{/each}}
 
 {{/if}}
