--- a/tools/typedoc-plugin-markdown/src/resources/partials/member.hbs
+++ b/tools/typedoc-plugin-markdown/src/resources/partials/member.hbs
@@ -1,10 +1,10 @@
 {{#unless hasOwnDocument}}
 
-{{#if name}}
+{{!-- {{#if name}}
 
 ### {{#ifNamedAnchors}}<a id="{{anchor}}" name="{{this.anchor}}"></a> {{/ifNamedAnchors}}{{ escape name }}
 
-{{/if}}
+{{/if}} --}}
 
 {{/unless}}
 
