--- a/docs/_sass/tables.scss
+++ b/docs/_sass/tables.scss
@@ -9,8 +9,6 @@
   max-width: 100%;
   margin-bottom: $sp-5;
   overflow-x: auto;
-  border-radius: $border-radius;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
 }
 
 table {
@@ -22,6 +20,7 @@ table {
 th,
 td {
   @include fs-3;
+  text-align: left;
   min-width: 120px;
   padding-top: $sp-2;
   padding-right: $sp-3;
