--- a/docs/_sass/modules.scss
+++ b/docs/_sass/modules.scss
@@ -12,10 +12,11 @@
 @import "./navigation";
 @import "./typography";
 @import "./labels";
-@import "./buttons";
+// @import "./buttons";
 @import "./search";
 @import "./tables";
 @import "./code";
 @import "./utilities/utilities";
 @import "./print";
 @import "./dataspot.scss";
+@import "./custom/custom.scss"
