--- a/docs/_sass/content.scss
+++ b/docs/_sass/content.scss
@@ -29,6 +29,17 @@
     padding-left: 1.5em;
   }
 
+  .panel {
+    ul,
+    ol {
+      padding-left: 0;
+    }
+
+    li {
+      margin: 0;
+    }
+  }
+
   li {
     .highlight {
       margin-top: $sp-1;
@@ -248,7 +259,6 @@
     vertical-align: middle;
     margin: $sp-2;
   }
-
 }
 
 .page-title {
